syntax = "proto3";

package jonline;

import "google/protobuf/timestamp.proto";

message CreateAccountRequest {
  string username = 1;
  string password = 2;
  optional string email = 3;
  optional string phone = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool successful = 1;
  optional string auth_token= 2;
}

message RefreshTokenRequest {
  string auth_token = 1;
  optional google.protobuf.Timestamp expiration = 3;
}

message RefreshTokenResponse {
  bool successful = 1;
  optional string refresh_token = 2;
  optional google.protobuf.Timestamp expiration = 3;
}
